04. External Access/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: taobao.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port: 
              number: 8080
        path: /my-app
        pathType: Exact
